// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders collapsed order row 1`] = `
<li
  className="root"
>
  <div
    className="orderNumberContainer"
  >
    <span
      className="orderNumberLabel"
    >
      Order #
    </span>
    <span
      className="orderNumber"
    >
      000001
    </span>
  </div>
  <div
    className="orderDateContainer"
  >
    <span
      className="orderDateLabel"
    >
      Order Date
    </span>
    <span
      className="orderDate"
    >
      Aug 26, 2020
    </span>
  </div>
  <div
    className="orderTotalContainer"
  >
    <span
      className="orderTotalLabel"
    >
      Order Total
    </span>
    <div
      className="orderTotal"
    >
      <span>
        $123.45
      </span>
    </div>
  </div>
  <div
    className="orderItemsContainer"
  >
    <CollapsedImageGallery
      items={
        Array [
          "item1",
          "item2",
        ]
      }
    />
  </div>
  <div
    className="orderStatusContainer"
  >
    <span
      className="orderStatusBadge"
    >
      Processing
    </span>
    <OrderProgressBar
      status="Processing"
    />
  </div>
  <button
    className="contentToggleContainer"
    onClick={[MockFunction handleContentToggle]}
    type="button"
  >
    <span
      className="root"
    >
      <svg
        className="icon"
        fill="none"
        height={24}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="6 9 12 15 18 9"
        />
      </svg>
    </span>
  </button>
  <div
    className="content_collapsed"
  >
    To be completed by PWA-627
  </div>
</li>
`;

exports[`it renders open order row 1`] = `
<li
  className="root"
>
  <div
    className="orderNumberContainer"
  >
    <span
      className="orderNumberLabel"
    >
      Order #
    </span>
    <span
      className="orderNumber"
    >
      000001
    </span>
  </div>
  <div
    className="orderDateContainer"
  >
    <span
      className="orderDateLabel"
    >
      Order Date
    </span>
    <span
      className="orderDate"
    >
      Aug 26, 2020
    </span>
  </div>
  <div
    className="orderTotalContainer"
  >
    <span
      className="orderTotalLabel"
    >
      Order Total
    </span>
    <div
      className="orderTotal"
    >
      <span>
        $123.45
      </span>
    </div>
  </div>
  <div
    className="orderItemsContainer"
  />
  <div
    className="orderStatusContainer"
  >
    <span
      className="orderStatusBadge"
    >
      Shipped
    </span>
    <OrderProgressBar
      status="Shipped"
    />
  </div>
  <button
    className="contentToggleContainer"
    onClick={[MockFunction handleContentToggle]}
    type="button"
  >
    <span
      className="root"
    >
      <svg
        className="icon"
        fill="none"
        height={24}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="18 15 12 9 6 15"
        />
      </svg>
    </span>
  </button>
  <div
    className="content"
  >
    To be completed by PWA-627
  </div>
</li>
`;
